--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,124 +1,33 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.decipherstranger"
     android:versionCode="1"
     android:versionName="1.2" >
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ds_ico">
-
-        <activity
-            android:name=".activity.WelcomeActivity"
-            android:label="@string/app_name"
-            android:theme="@style/NoTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".activity.ShakeActivity.ShakeActivity"
-            android:label="@string/shake"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.ShakeActivity.ShakeSettingsActivity"
-            android:label="@string/shakeSettings"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.LoginActivity"
-            android:label="@string/app_name_ch"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.RegisterActivityBase"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme" />
-
-        <activity android:name=".activity.RegisterActivityPhoto"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme" />
-
-        <activity android:name=".activity.MainActivity"
-            android:label="@string/app_name_ch"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.GameActivity.WelcomeActivity"
-            android:label="@string/app_name_ch"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.GameActivity.SetGradeActivity"
-            android:label="@string/game_name"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.GameActivity.RockPaperScissorsActivity"
-            android:label="@string/game_name"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.GameActivity.SuccessActivity"
-            android:label="@string/game_name"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".activity.GameActivity.ErrorActivity"
-            android:label="@string/game_name"
-            android:theme="@style/AppTheme"/>
-        <activity
-            android:name=".activity.ShowMapActivity"
-            android:label="@string/app_name_en"
-            android:theme="@style/NoTheme"/>
-
-        <activity android:name=".activity.GameActivity.HelpActivity"
-            android:label="@string/game_name"
-            android:theme="@style/AppTheme"/>
-        <activity android:name=".activity.MainPageActivity.MainPage"
-            android:label="解密陌生人"
-            android:theme="@style/NoTheme"/>
-        <activity android:name=".activity.MainPageActivity.NearbyListViewActivity"
-            android:label="解密陌生人"
-            android:theme="@style/AppBaseTheme"/>
-
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="Lzh3rZgTDGNbzDAxY6me92lz"/>
-        <!--彭海涛-->
-        <!--android:value="WN8ktA9ihtBXFIHKPszx64G9"-->
-        <!--王鑫-->
-        <!--android:value="Lzh3rZgTDGNbzDAxY6me92lz"-->
-
-        <service
-            android:name="com.baidu.location.f"
-            android:enabled="true"
-            android:process=":remote" >
-            <intent-filter>
-                <action android:name="com.baidu.location.service_v2.2" />
-            </intent-filter>
-        </service>
-
-    </application>
-
     <uses-sdk android:minSdkVersion="14" />
 
-    <!-- 这个权限用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-    <!-- 这个权限用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-    <!-- 用于读取手机当前的状态-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <!-- 访问网络，网络定位需要上网-->
+    <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- 用于读取手机当前的状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 访问网络，网络定位需要上网 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--SD卡读取权限，用户写入离线定位数据-->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
-    <!--允许应用读取低级别的系统日志文件 -->
-    <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
-    <!--允许应用访问振动设备-->
-    <uses-permission android:name="android.permission.VIBRATE"/>
-
+    <!-- SD卡读取权限，用户写入离线定位数据 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!-- 允许应用读取低级别的系统日志文件 -->
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <!-- 允许应用访问振动设备 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
@@ -133,5 +42,98 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ds_ico" >
+        <activity
+            android:name=".activity.WelcomeActivity"
+            android:label="@string/app_name"
+            android:theme="@style/NoTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.ShakeActivity.ShakeActivity"
+            android:label="@string/shake"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.ShakeActivity.ShakeSettingsActivity"
+            android:label="@string/shakeSettings"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:label="@string/app_name_ch"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.RegisterActivityBase"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.RegisterActivityPhoto"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name_ch"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.GameActivity.WelcomeActivity"
+            android:label="@string/app_name_ch"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.GameActivity.SetGradeActivity"
+            android:label="@string/game_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.GameActivity.RockPaperScissorsActivity"
+            android:label="@string/game_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.GameActivity.SuccessActivity"
+            android:label="@string/game_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.GameActivity.ErrorActivity"
+            android:label="@string/game_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.ShowMapActivity"
+            android:label="@string/app_name_en"
+            android:theme="@style/NoTheme" />
+        <activity
+            android:name=".activity.GameActivity.HelpActivity"
+            android:label="@string/game_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.MainPageActivity.MainPage"
+            android:label="解密陌生人"
+            android:theme="@style/NoTheme" />
+        <activity
+            android:name=".activity.MainPageActivity.NearbyListViewActivity"
+            android:label="解密陌生人"
+            android:theme="@style/AppBaseTheme" />
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="Lzh3rZgTDGNbzDAxY6me92lz" />
+        <!-- 彭海涛 -->
+        <!-- android:value="WN8ktA9ihtBXFIHKPszx64G9" -->
+        <!-- 王鑫 -->
+        <!-- android:value="Lzh3rZgTDGNbzDAxY6me92lz" -->
+
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+            <intent-filter>
+                <action android:name="com.baidu.location.service_v2.2" />
+            </intent-filter>
+        </service>
+
+    </application>
 
 </manifest>
