# Decipher Stranger # LoginReceiver Commit

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 12 11:55:29 CST 2015
-sdk.dir=E\:\\Android\\sdk\\android-sdk
+#Wed Apr 15 12:42:19 CST 2015
+sdk.dir=E\:\\Application software\\Android\\android-sdk
