--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity android:name=".activity.GameActivity.SetGradeActivity"/>
         <activity android:name=".activity.GameActivity.RockPaperScissorsActivity" />
         <activity android:name=".activity.GameActivity.SuccessActivity"/>
-        <activity android:name=".activity.GameActivity.ErrorActivity" />
+        <activity android:name=".activity.GameActivity.FailActivity" />
         
         <activity
             android:name=".activity.ShowMapActivity"
