--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 17 22:09:10 CST 2015
-sdk.dir=E\:\\Application software\\Android\\android-sdk
+#Mon Apr 20 21:13:55 CST 2015
+sdk.dir=E\:\\Android\\sdk\\android-sdk
