--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,15 @@
             android:name=".activity.MainPageActivity.NearbyListViewActivity"
             android:label="解密陌生人"
             android:theme="@style/AppBaseTheme" />
+        <activity
+            android:name=".activity.MainPageActivity.ChatMsgActivity"
+            android:label="解密陌生人"
+            android:theme="@style/AppBaseTheme" />
+        <activity
+            android:name=".activity.FriendInfoActivity"
+            android:label="解密陌生人"
+            android:theme="@style/AppBaseTheme" />
+
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
