--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 25 11:15:12 CST 2015
-sdk.dir=E\:\\Android\\sdk\\android-sdk
+#Sun Apr 26 07:50:23 CST 2015
+sdk.dir=E\:\\Application software\\Android\\android-sdk
