# Decipher Stranger # Game # Created by penghaitao 4/28

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Apr 26 07:50:23 CST 2015
-sdk.dir=E\:\\Application software\\Android\\android-sdk
+sdk.dir=E\:\\Android\\sdk\\android-sdk
