--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,10 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('E:/Code/My_code/Android_Projects/DecipherStranger/libs/BaiduLBS_Android.jar')
     compile files('D:/workspace_for_Android/Git_DS/DecipherStranger/libs/BaiduLBS_Android.jar')
     compile files('D:/workspace/DecipherStranger/libs/BaiduLBS_Android.jar')
+    compile files('D:/workspace_for_android/git_for_DS/DecipherStranger/libs/BaiduLBS_Android.jar')
 }
