--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,37 +8,32 @@
         android:allowBackup="true"
         android:icon="@drawable/ds_ico"
         android:label="@string/app_name_ch"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/NoTheme" >
         <activity
             android:name=".activity.WelcomeActivity"
-            android:label="@string/app_name"
-            android:theme="@style/NoTheme" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         
+        <!--登录-->
+        <activity android:name=".activity.LoginActivity"/>
+        
+        <!--注册-->
+        <activity android:name=".activity.RegisterActivityBase"/>
+        <activity android:name=".activity.RegisterActivityPhoto"/>
 
-        <activity
-            android:name=".activity.LoginActivity"
-            android:label="@string/app_name_ch"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".activity.RegisterActivityBase"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".activity.RegisterActivityPhoto"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name_ch"
-            android:theme="@style/AppTheme" />
-
+        <!--主界面-->
+        <activity android:name=".activity.MainPageActivity.MainPageActivity"/>
+        <activity android:name=".activity.MainPageActivity.ConversationPageActivity"/>
+        <activity android:name=".activity.MainPageActivity.ContactsPageActivity"/>
+        <activity android:name=".activity.MainPageActivity.MorePageActivity"/>
+        <activity android:name=".activity.MainPageActivity.UserPageActivity"/>
+        
         <!--摇一摇-->
-        <activity android:name=".activity.ShakeActivity.ShakeActivity"/>
+        <activity android:name=".activity.SubpageActivity.ShakeActivity"/>
         
         <!--游戏-->
         <activity android:name=".activity.GameActivity.WelcomeActivity"/>
@@ -47,13 +42,10 @@
         <activity android:name=".activity.GameActivity.SuccessActivity"/>
         <activity android:name=".activity.GameActivity.FailActivity" />
         
-        <activity
-            android:name=".activity.ShowMapActivity"
-            android:label="@string/app_name_en"
-            android:theme="@style/NoTheme" />
+        <activity android:name=".activity.SubpageActivity.ShowMapActivity"/>
 
         <activity
-            android:name=".activity.MainPageActivity.NearbyListViewActivity"
+            android:name=".activity.SubpageActivity.NearbyListViewActivity"
             android:label="解密陌生人"
             android:theme="@style/AppBaseTheme" />
         <activity
@@ -61,7 +53,7 @@
             android:label="解密陌生人"
             android:theme="@style/AppBaseTheme" />
         <activity
-            android:name=".activity.FriendInfoActivity"
+            android:name=".activity.SubpageActivity.FriendInfoActivity"
             android:label="解密陌生人"
             android:theme="@style/AppBaseTheme" />
 
@@ -114,15 +106,9 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
