--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.decipherstranger"
     android:versionCode="1"
-    android:versionName="1.2" >
+    android:versionName="0.3" >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ds_ico"
         android:label="@string/app_name_ch"
-        android:name=".util.MyApplication"
+        android:name=".activity.Base.MyApplication"
         android:theme="@style/NoTheme" >
         <activity
             android:name=".activity.WelcomeActivity"
@@ -27,7 +27,8 @@
         <activity android:name=".activity.RegisterActivityPhoto"/>
 
         <!--主界面-->
-        <activity android:name=".activity.MainPageActivity.MainPageActivity"/>
+        <activity android:windowSoftInputMode="adjustPan"
+            android:name=".activity.MainPageActivity.MainPageActivity"/>
         <activity android:name=".activity.MainPageActivity.ConversationPageActivity"/>
         <activity android:name=".activity.MainPageActivity.ContactsPageActivity"
             android:windowSoftInputMode="stateUnchanged" />
