--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <!-- 注册 -->
         <activity android:name=".activity.RegisterActivityBase" />
         <activity android:name=".activity.RegisterActivityPhoto" />
+        <activity android:name=".activity.test" />
 
         <!-- 主界面 -->
         <activity
